--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
         android:layout_marginStart="120dp"
         android:layout_marginTop="20dp"
         android:text="Background Editor"
+        android:onClick="test"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnStart" />
 
@@ -35,7 +36,7 @@
         android:layout_marginStart="148dp"
         android:layout_marginTop="20dp"
         android:text="Make Board"
-        android:onClick="test"
+        android:onClick="makeBoard"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnOptions"/>
 
