--- a/app/src/main/res/layout/activity_make_board.xml
+++ b/app/src/main/res/layout/activity_make_board.xml
@@ -20,7 +20,8 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/board_name"/>
+        android:id="@+id/board_name"
+        android:hint="Enter Board name"/>
 
     <Button
         android:id="@+id/addBlackPiece"
