--- a/app/src/main/res/layout/activity_load_board.xml
+++ b/app/src/main/res/layout/activity_load_board.xml
@@ -29,11 +29,15 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listOfBoards"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="371dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/topText"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"/>
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp" />
 
 </RelativeLayout>
