testing data to make sure recyclerview scrolls

--- a/app/src/main/res/layout/board_item.xml
+++ b/app/src/main/res/layout/board_item.xml
@@ -1,17 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal">
 
     <TextView
+        android:id="@+id/board_item_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/board_item_name"/>
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="32dp"
+        android:text="MEGA HATDOG" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/board_item_fenString"/>
+        android:id="@+id/board_item_fenString"
+        android:layout_width="250dp"
+        android:layout_height="61dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="25dp"
+        android:text="rnbqkbnr/pppppppp/8/8/4P3/8/PPPP1PPP/RNBQKBNR b KQkq e3 0 1" />
 
-</LinearLayout>
+</RelativeLayout>
