--- a/app/src/main/res/layout/activity_make_board.xml
+++ b/app/src/main/res/layout/activity_make_board.xml
@@ -33,4 +33,10 @@
         android:onClick="SaveToDB"
         android:text="Save to DB"/>
 
+    <RelativeLayout
+        android:id="@+id/boardLayout"
+        android:layout_width="match_parent"
+        android:layout_height="429dp"
+        android:orientation="vertical"></RelativeLayout>
+
 </LinearLayout>
