--- a/app/src/main/res/layout/activity_add_piece.xml
+++ b/app/src/main/res/layout/activity_add_piece.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -24,23 +24,56 @@
 <!--        android:id="@+id/Side"-->
 <!--        android:hint="Side"/>-->
 
-    <Spinner
+    <TextView
+        android:id="@+id/id_textview2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/piece_name_spinner"/>
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="116dp"
+        android:layout_marginEnd="70dp"
+        android:layout_toStartOf="@+id/piece_name_spinner"
+        android:text="PIECE NAME: " />
 
-    <Spinner
+    <TextView
+        android:id="@+id/id_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/piece_location_spinner"/>
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="474dp"
+        android:layout_toStartOf="@+id/piece_location_spinner"
+        android:text="PIECE LOCATION: " />
 
+    <Spinner
+        android:id="@+id/piece_name_spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/piece_location_spinner"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="110dp"
+        android:layout_marginEnd="182dp"
+        android:layout_marginBottom="84dp" />
+
+    <Spinner
+        android:id="@+id/piece_location_spinner"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/addPiece"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="183dp"
+        android:layout_marginBottom="88dp" />
 
     <Button
         android:id="@+id/addPiece"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add Piece"
-        android:onClick="addPiece"/>
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="170dp"
+        android:layout_marginBottom="344dp"
+        android:onClick="addPiece"
+        android:text="Add Piece" />
 
 
-</LinearLayout>
+</RelativeLayout>
